fixed alignment issue

--- a/src/services/MediaUpload.scss
+++ b/src/services/MediaUpload.scss
@@ -21,6 +21,9 @@
       border-color: #007bff;
       background-color: rgb(255, 255, 255, 0.2);
     }
+    p {
+      margin: 0;
+    }
   }
   
   .preview-container {
